--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,22 @@
     font-family: "RaleWay";
     src: url("../fonts/raleway/Raleway-Medium.ttf") format("truetype");
 }
-body{
+.body-day{
     font-family: "Raleway";
     background-color: #3F3F3F;
     border-top: 3px black solid;
 }
+.body-night{
+    font-family: "Raleway";
+    background-color: #CFCFCF;
+    border-top: 3px lightgrey solid;
+}
+
+/* TABS */
 .tab-close{
     border-top-left-radius: 2em;
     padding-top: 5px;
     border-left: 5px #000000 solid;
-    border-bottom: 8px #ff0000 solid;
     color: white;
 }
 .tab-close:hover{
@@ -20,14 +26,42 @@ body{
 .tab-open{
     border-top-left-radius: 2em;
     border-top-right-radius: 2em;
-    border-top: 5px #ff0000 solid;
     background-color: white;
 }
 .tab-fix{
     border-top-left-radius: 2em;
     border-top-right-radius: 2em;
-    border-top: 5px #ff0000 solid;
     background-color: white;
+}
+.red-open-color{
+    border-top: 5px #ff0000 solid;
+}
+.red-close-color{
+    border-bottom: 8px #ff0000 solid;
+}
+.blue-open-color{
+    border-top: 5px #4400ff solid;
+}
+.blue-close-color{
+    border-bottom: 8px #4400ff solid;
+}
+.green-open-color{
+    border-top: 5px #02e75a solid;
+}
+.green-close-color{
+    border-bottom: 8px #02e75a solid;
+}
+.purple-open-color{
+    border-top: 5px #ac0095 solid;
+}
+.purple-close-color{
+    border-bottom: 8px #ac0095 solid;
+}
+.orange-open-color{
+    border-top: 5px #ffc400 solid;
+}
+.orange-close-color{
+    border-bottom: 8px #ffc400 solid;
 }
 .card{
     background-color: #FFFFFF;
@@ -46,6 +80,16 @@ body{
     width: 85%;
     margin: auto;
 }
+.top-timeline{
+    border-bottom: 6px black solid;
+    width: 95%;
+    margin: auto;
+}
+.bottom-timeline{
+    border-top: 6px black solid;
+    width: 95%;
+    margin: auto;
+}
 h1,h2{
     letter-spacing: 2px;
 }
@@ -54,3 +98,54 @@ h1,h2{
     50%  {height: 90vh; opacity: 20%; }
     100%    {height: 90vh;}
 }
+
+  /* ---- Timeline ----
+ol {
+    display: block;
+    margin: 100px;
+    height: 4px;
+    background: #000000;
+}
+ol::before, ol::after {
+    content: "";
+    position: absolute;
+    top: -8px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-radius: 10px;
+    border: 10px solid #000000;
+}
+ol::after {
+    right: -10px;
+    border: 10px solid transparent;
+    border-right: 0;
+    border-left: 20px solid #000000;
+    border-radius: 3px;
+}
+
+/* ---- Timeline elements ---- */
+/* li {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 50px;
+}
+li .diplome {
+    position: absolute;
+    top: -47px;
+    left: 36%;
+    color: #000000;
+}
+li .dot {
+    content: "";
+    top: -4px;
+    left: 43%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    border: 6px solid #4400ff;
+    border-radius: 10px;
+    background: #fff;
+    position: absolute;
+}  */
